--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,8 @@
 				<module>neuron-parent</module>
 				<module>neuron-utility</module>
 				<module>neuron-core</module>
+				<module>neuron-socket</module>
+				<module>neuron-javascript</module>
 				<module>neuron-starters</module>
 			</modules>
 		</profile>
