--- a/neuron-dependencies/pom.xml
+++ b/neuron-dependencies/pom.xml
@@ -65,6 +65,21 @@
 			</dependency>
 			<dependency>
 				<groupId>com.neuron</groupId>
+				<artifactId>neuron-yaml</artifactId>
+				<version>1.0.0</version>
+			</dependency>
+			<dependency>
+				<groupId>com.neuron</groupId>
+				<artifactId>neuron-socket</artifactId>
+				<version>1.0.0</version>
+			</dependency>
+			<dependency>
+				<groupId>com.neuron</groupId>
+				<artifactId>neuron-javascript</artifactId>
+				<version>1.0.0</version>
+			</dependency>
+			<dependency>
+				<groupId>com.neuron</groupId>
 				<artifactId>neuron-starter-app</artifactId>
 				<version>1.0.0</version>
 				<type>pom</type>
