Fixing issues. Added neuron-http

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
 				<module>neuron-yaml</module>
 				<module>neuron-socket</module>
 				<module>neuron-javascript</module>
+				<module>neuron-http</module>
 				<module>neuron-starters</module>
 			</modules>
 		</profile>
