--- a/neuron-dependencies/pom.xml
+++ b/neuron-dependencies/pom.xml
@@ -80,6 +80,11 @@
 			</dependency>
 			<dependency>
 				<groupId>com.neuron</groupId>
+				<artifactId>neuron-http</artifactId>
+				<version>1.0.0</version>
+			</dependency>
+			<dependency>
+				<groupId>com.neuron</groupId>
 				<artifactId>neuron-starter-app</artifactId>
 				<version>1.0.0</version>
 				<type>pom</type>
