--- a/neuron-dependencies/pom.xml
+++ b/neuron-dependencies/pom.xml
@@ -19,7 +19,7 @@
 		<slf4j.version>1.7.25</slf4j.version>
 		<netty.version>4.1.30.Final</netty.version>
 		<rhino.version>1.7.10</rhino.version>
-		
+		<findbugs.version>2.0.1</findbugs.version>
 		<hamcrest.version>1.3</hamcrest.version>
 		<mockito.version>2.22.0</mockito.version>
 
@@ -91,6 +91,11 @@
 			</dependency>
 
 			<!-- Third Party -->
+			<dependency>
+				<groupId>com.google.code.findbugs</groupId>
+				<artifactId>jsr305</artifactId>
+				<version>${findbugs.version}</version>
+			</dependency>
 			<dependency>
 				<groupId>org.apache.logging.log4j</groupId>
 				<artifactId>log4j-bom</artifactId>
