--- a/neuron-http/pom.xml
+++ b/neuron-http/pom.xml
@@ -23,6 +23,14 @@
 			<artifactId>neuron-core</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.neuron</groupId>
+			<artifactId>neuron-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.findbugs</groupId>
+			<artifactId>jsr305</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.asynchttpclient</groupId>
 			<artifactId>async-http-client</artifactId>
 			<version>2.5.4-BK</version>
